[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Froggit_batalla.gd" type="Script" id=1]
[ext_resource path="res://Fightscene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Froggit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Commander_froggit.gd" type="Script" id=4]
[ext_resource path="res://Audio/Enemy(froggit)_theme.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Froggit.gd" type="Script" id=6]
[ext_resource path="res://Spawner.gd" type="Script" id=7]
[ext_resource path="res://Escenas/Proyectil_froggit2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/SpeechGlobeFroggit.gd" type="Script" id=9]

[node name="Fightscene" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Commander" parent="." index="4"]
script = ExtResource( 4 )
Projectile2 = ExtResource( 8 )

[node name="Spawner0" parent="Commander" index="0"]
position = Vector2( 440, 260 )

[node name="Spawner1" parent="Commander" index="1"]
position = Vector2( 480, 260 )

[node name="Spawner2" parent="Commander" index="2"]
position = Vector2( 610, 260 )

[node name="Spawner5" type="Position2D" parent="Commander" index="5"]
position = Vector2( 585, 410 )
script = ExtResource( 7 )

[node name="Enemy" parent="." index="7" instance=ExtResource( 3 )]
position = Vector2( 460, 175 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="GUI" parent="." index="8"]
margin_left = -0.306351

[node name="Mixtape" parent="." index="9"]
stream = ExtResource( 5 )

[node name="TextureRect" parent="." index="11"]
margin_left = 550.0
margin_top = 120.0
margin_right = 675.0
margin_bottom = 200.0
script = ExtResource( 9 )
[connection signal="back_world" from="GUI" to="Enemy" method="_on_GUI_back_world"]
